--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="menu">
-      <h1 class="title">Kickboxing</h1>
+      <h1 class="title"><i class="fas fa-university">Kickboxing</i></h1>
       <ul>
         <li><a href="#clases">Clases</a></li>
         <ul>
